--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,13 +1,11 @@
 // Font Family
-$opensans: 'Open Sans', sans-serif;
 $poppins: 'Poppins', sans-serif;
-
 // Colors ---------------
 $white: #ffffff;
 $black: #222;
 $grey:#f9f9f9;
-$theme-color: #ec6e39;
-$body-text-color: #899399;
+$theme-color: #e16038;
+$body-text-color: #333;
 $hr-border-color:#eceff8;
 
 
