--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -3,13 +3,13 @@
 /*----------------------------------------*/
 
 /* 1. Theme default css */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
-	font-family: $opensans;
+	font-family: $poppins;
 	font-weight: 400;
     font-style: normal;
     color:$body-text-color;
+	font-size: 16px;
 }
 .img,img {
 	max-width: 100%;
@@ -23,6 +23,9 @@ body {
 }
 .fix {
 	overflow: hidden
+}
+a{
+	text-decoration: none;
 }
 a,
 .button {
