--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,29 +1,36 @@
 .header-transparent{
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-}
-.header-social{
-	& a{
-		color: $body-text-color;
-		font-size: 16px;
-		margin-right: 15px;
-	}
-}
-.user-login{
-	& a{
-		font-size: 12px;
-		text-transform: uppercase;
-		font-weight: 700;
-		color: $body-text-color;
-		text-decoration: none;
-		& i{
-			margin-right: 5px;
-		}
-	}
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
 }
 
 
-
-
+//btn
+.h-btn{
+    background-color: $theme-color;
+    color: $white;
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    border: 2px solid transparent;
+    transition: .3s ease-out;
+    border-radius: 5px;
+    &:hover{
+        background: transparent;
+        border-color: $theme-color; 
+        color: $white;
+    }
+}
+.btn-border{
+    background: transparent;
+    border-color: $theme-color;
+    &:hover{
+        background-color: $theme-color; 
+        border-color: $theme-color; 
+        color: $white;
+    }
+}
