--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,10 +1,10 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Sample - Corporate Business Bootstrap4 HTML5 Template
-    Template URI: site.com
-    Description: Sample - Corporate Business Bootstrap4 HTML5 Template
-    Author: BasicTheme
-    Author URI: site.com
+    Template Name: Hablu - Multipurpose Agency Template
+    Template URI: https://positiveworldbd.github.io/hablu-psd/
+    Description: Hablu - Multipurpose Agency Template
+    Author: PositiveWorld
+    Author URI: www.positiveworld.com.bd
     Version: 1.0
 
 -----------------------------------------------------------------------------------
@@ -23,4 +23,5 @@
 @import 'common';
 @import 'overlay';
 @import 'header';
+@import 'slider';
 
