--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1642,6 +1642,21 @@ label {
   color: #ffffff;
 }
 
+.slider-area .owl-dots {
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.slider-area .owl-dots button {
+  background: #e16038 !important;
+  width: 20px;
+  height: 20px;
+  display: block;
+  margin: 10px 0;
+  border-radius: 50%;
+}
+
 .single-slide {
   min-height: 1000px;
   background-size: cover;
