--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -1,3 +1,20 @@
+.slider-area{
+    // owl-carousel for slider
+    & .owl-dots{
+        position: absolute;
+        right: 30px;
+        top: 50%;
+        transform: translateY(-50%);
+        & button{
+            background: $theme-color !important;
+            width: 20px;
+            height: 20px;
+            display: block;
+            margin: 10px 0;
+            border-radius: 50%;
+        }
+    }
+}
 .single-slide{
     min-height: 1000px;
     background-size: cover;
@@ -35,3 +52,7 @@
         }
     }
 }
+
+
+
+
