--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1656,6 +1656,9 @@ label {
   margin: 10px 0;
   border-radius: 50%;
 }
+.slider-area .owl-dots button.active {
+  background: #ffffff !important;
+}
 
 .single-slide {
   min-height: 1000px;
