--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -1,5 +1,5 @@
 .slider-area{
-    // owl-carousel for slider
+    // owl-carousel dots for slider-area
     & .owl-dots{
         position: absolute;
         right: 30px;
@@ -12,6 +12,9 @@
             display: block;
             margin: 10px 0;
             border-radius: 50%;
+            &.active{
+                background: $white !important;
+            }
         }
     }
 }
@@ -28,7 +31,6 @@
         opacity: .8;
     }
 }
-
 .hslide{
     &__text{
         & span{
