--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -4,7 +4,23 @@
     left: 0;
     right: 0;
     z-index: 100;
+    & .header-top{
+        padding: 10px 0;
+        & .navbar-brand {
+            color: $white;
+            font-size: 25px;
+            text-transform: uppercase;
+            font-weight: 400;
+            letter-spacing: 1px;
+        }
+    }
 }
+
+
+
+
+
+
 
 
 //btn
