--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1613,15 +1613,24 @@ label {
   right: 0;
   z-index: 100;
 }
-.header-transparent .header-top {
-  padding: 10px 0;
-}
-.header-transparent .header-top .navbar-brand {
+.header-transparent .header-top .navbar .navbar-brand {
   color: #ffffff;
   font-size: 25px;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 1px;
+}
+.header-transparent .header-top .navbar .navbar-nav li {
+  margin-left: 30px;
+  padding: 15px 0;
+}
+.header-transparent .header-top .navbar .navbar-nav li:hover a {
+  color: #e16038;
+}
+.header-transparent .header-top .navbar .navbar-nav li a {
+  color: #ffffff;
+  text-transform: uppercase;
+  transition: 0.3s ease-out;
 }
 
 .h-btn {
