section-title design

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,6 +22,8 @@
 @import 'mixins';
 @import 'common';
 @import 'overlay';
+@import 'section-title';
 @import 'header';
 @import 'slider';
+@import 'about';
 
