--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -8,6 +8,9 @@
                     line-height: 2;
                 }
             }
+            &-btn{
+                
+            }
         }
         &__img{
             //Image before after Background Design
