--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1765,4 +1765,57 @@ label {
   margin-left: 5px;
 }
 
+.features-area {
+  background-color: #f9f9f9;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+}
+
+.feature-1, .feature-2 {
+  position: relative;
+}
+.feature-1::after, .feature-2::after {
+  position: absolute;
+  content: "";
+  background: url(../img/feature-1.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+}
+.feature-1::before, .feature-2::before {
+  position: absolute;
+  content: "";
+  background: #333;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  opacity: 0.8;
+}
+
+.feature-2::after {
+  background: url(../img/feature-2.jpg);
+  background-size: cover;
+  background-position: center;
+  left: 0;
+}
+.feature-2::before {
+  left: 0;
+}
+
+.single-feature i {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+.single-feature h3 {
+  font-size: 22px;
+  margin-bottom: 15px;
+  text-transform: capitalize;
+}
+
 /*# sourceMappingURL=main.css.map */
