--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Font Family
-$poppins: 'Poppins', sans-serif;
+$poppins: 'Poppins',
+sans-serif;
 // Colors ---------------
 $white: #ffffff;
 $black: #333;
@@ -22,4 +23,3 @@ $lg : 'only screen and (min-width: 992px) and (max-width: 1200px)';
 $md:'only screen and (min-width: 768px) and (max-width: 991px)';
 $xs:'(max-width: 767px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
-
