--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -4,56 +4,76 @@
 
 /* 1. Theme default css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
 	font-family: $poppins;
 	font-weight: 400;
-    font-style: normal;
-    color:$body-text-color;
+	font-style: normal;
+	color: $body-text-color;
 	font-size: 16px;
 }
-.img,img {
+
+.img,
+img {
 	max-width: 100%;
 	@include transition(.3s);
 }
+
 .f-left {
 	float: left
 }
+
 .f-right {
 	float: right
 }
+
 .fix {
 	overflow: hidden
 }
-a{
+
+a {
 	text-decoration: none;
 }
+
 a,
 .button {
 	@include transition(.3s);
 }
+
 a:focus,
 .button:focus {
 	text-decoration: none;
 	outline: none;
 }
+
 a:focus,
-a:hover
-{
+a:hover {
 	color: inherit;
 	text-decoration: none;
 }
+
 a,
 button {
 	color: inherit;
 	outline: medium none;
 }
-button:focus,input:focus,input:focus,textarea,textarea:focus{outline: 0}
+
+button:focus,
+input:focus,
+input:focus,
+textarea,
+textarea:focus {
+	outline: 0
+}
+
 .uppercase {
 	text-transform: uppercase;
 }
+
 .capitalize {
 	text-transform: capitalize;
 }
+
 h1,
 h2,
 h3,
@@ -66,6 +86,7 @@ h6 {
 	font-weight: 600;
 	text-transform: normal;
 }
+
 h1 a,
 h2 a,
 h3 a,
@@ -74,32 +95,41 @@ h5 a,
 h6 a {
 	color: inherit;
 }
+
 h1 {
 	font-size: 40px;
 	font-weight: 500;
 }
+
 h2 {
 	font-size: 35px;
 }
+
 h3 {
 	font-size: 28px;
 }
+
 h4 {
 	font-size: 22px;
 }
+
 h5 {
 	font-size: 18px;
 }
+
 h6 {
 	font-size: 16px;
 }
+
 ul {
 	margin: 0px;
 	padding: 0px;
 }
+
 li {
 	list-style: none
 }
+
 p {
 	font-size: 14px;
 	font-weight: normal;
@@ -107,28 +137,33 @@ p {
 	color: $body-text-color;
 	margin-bottom: 15px;
 }
+
 hr {
 	border-bottom: 1px solid $hr-border-color;
 	border-top: 0 none;
 	margin: 30px 0;
 	padding: 0;
 }
+
 label {
 	color: $black-soft;
 	cursor: pointer;
 	font-size: 14px;
 	font-weight: 400;
 }
+
 *::-moz-selection {
 	background: $black;
 	color: $white;
 	text-shadow: none;
 }
+
 ::-moz-selection {
 	background: $black;
-	color:$white;
+	color: $white;
 	text-shadow: none;
 }
+
 ::selection {
 	background: $black;
 	color: $white;
@@ -143,6 +178,7 @@ label {
 	font-size: 14px;
 	opacity: 1;
 }
+
 *::placeholder {
 	color: $black;
 	font-size: 14px;
@@ -154,10 +190,11 @@ label {
     - Common Classes
 -----------------------------------------*/
 .fix {
-    overflow:hidden
+	overflow: hidden
 }
-.clear{
-    clear: both;
+
+.clear {
+	clear: both;
 }
 
 
@@ -167,12 +204,15 @@ label {
 .grey-bg {
 	background: $grey;
 }
+
 .white-bg {
-	background:$white;
+	background: $white;
 }
+
 .black-bg {
 	background: $black;
 }
+
 .theme-bg {
 	background: $theme-color;
 }
@@ -183,9 +223,11 @@ label {
 .white-color {
 	color: $white;
 }
+
 .black-color {
 	color: $black;
 }
+
 .theme-color {
 	color: $theme-color;
 }
@@ -195,43 +237,59 @@ label {
 -----------------------------------------*/
 /*-- Margin Top --*/
 @for $i from 1 through 40 {
-    .mt-#{5 * $i}{margin-top: 5px * $i;}
+	.mt-#{5 * $i} {
+		margin-top: 5px * $i;
+	}
 }
+
 /*-- Margin Bottom --*/
 @for $i from 1 through 40 {
-    .mb-#{5 * $i}{margin-bottom: 5px *$i;}
+	.mb-#{5 * $i} {
+		margin-bottom: 5px *$i;
+	}
 }
+
 /*-- Margin Left --*/
 @for $i from 1 through 40 {
-    .ml-#{5 * $i}{margin-left: 5px * $i;}
+	.ml-#{5 * $i} {
+		margin-left: 5px * $i;
+	}
 }
 
 /*-- Margin Right --*/
 @for $i from 1 through 40 {
-    .mr-#{5 * $i}{margin-right: 5px *$i;}
+	.mr-#{5 * $i} {
+		margin-right: 5px *$i;
+	}
 }
 
 /*-- Padding Top --*/
 @for $i from 1 through 40 {
-    .pt-#{5 * $i}{padding-top: 5px *$i;}
+	.pt-#{5 * $i} {
+		padding-top: 5px *$i;
+	}
 }
 
 /*-- Padding Bottom --*/
 @for $i from 1 through 40 {
-    .pb-#{5 * $i}{padding-bottom: 5px *$i;}
+	.pb-#{5 * $i} {
+		padding-bottom: 5px *$i;
+	}
 }
 
 /*-- Padding Left --*/
 @for $i from 1 through 40 {
-    .pl-#{5 * $i}{padding-left: 5px *$i;}
+	.pl-#{5 * $i} {
+		padding-left: 5px *$i;
+	}
 }
 
 /*-- Padding Right --*/
 @for $i from 1 through 40 {
-    .pr-#{5 * $i}{padding-right: 5px *$i;}
+	.pr-#{5 * $i} {
+		padding-right: 5px *$i;
+	}
 }
 
 
 // others common css here :)
-
-
