--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1900,4 +1900,57 @@ label {
   text-align: center;
 }
 
+.projects__item {
+  position: relative;
+}
+.projects__item:hover {
+  cursor: pointer;
+}
+.projects__item:hover .projects__item-overlay {
+  transform: scale(1);
+}
+.projects__item-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(0);
+  transition: all 0.3s;
+}
+.projects__item-overlay::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  opacity: 0.8;
+  left: 0;
+  top: 0;
+}
+.projects__item-overlay-content {
+  color: #fff;
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.projects__item-overlay-content i {
+  font-size: 50px;
+}
+.projects__item-overlay-content h3 {
+  font-size: 25px;
+  text-transform: capitalize;
+  color: #fff;
+  margin-top: 10px;
+}
+.projects__item-overlay-content h3 span {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 10px;
+}
+
 /*# sourceMappingURL=main.css.map */
