counter plugin apply to counter area

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -30,3 +30,8 @@
 @import 'services';
 @import 'process';
 @import 'project';
+@import 'counter';
+@import 'team';
+@import 'testimonial';
+@import 'blog';
+@import 'contact';
