--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1953,28 +1953,19 @@ label {
   margin-top: 10px;
 }
 
-.counter-area {
-  background: #333;
-}
-.counter-area .single-counter {
-  text-align: center;
-}
 .counter-area .single-counter i {
   font-size: 35px;
   margin-bottom: 10px;
-  color: #e16038;
 }
-.counter-area .single-counter span {
+.counter-area .single-counter i h4 {
+  font-size: 25px;
+  text-transform: capitalize;
+}
+.counter-area .single-counter i h4 span {
   display: block;
   font-size: 53px;
   margin-bottom: 10px;
   font-weight: 300;
-  color: #ffffff;
-}
-.counter-area .single-counter h4 {
-  font-size: 25px;
-  text-transform: capitalize;
-  color: #ffffff;
 }
 
 /*# sourceMappingURL=main.css.map */
