video popup done

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,6 +32,7 @@
 @import 'project';
 @import 'counter';
 @import 'team';
+@import 'calltoaction';
 @import 'testimonial';
 @import 'blog';
 @import 'contact';
