--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1953,9 +1953,6 @@ label {
   margin-top: 10px;
 }
 
-.counter-area {
-  background: #333;
-}
 .counter-area .single-counter {
   text-align: center;
 }
@@ -2010,6 +2007,34 @@ label {
   font-size: 16px;
   font-weight: 300;
   margin-top: 10px;
+}
+
+.video-area {
+  color: #ffffff;
+}
+.video-area .video-content i {
+  font-size: 36px;
+  border: 3px solid #fff;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 80px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.video-area .video-content i:hover {
+  color: #e16038;
+  border-color: #e16038;
+}
+.video-area .video-content h2 {
+  font-size: 35px;
+  color: #fff;
+  text-transform: uppercase;
+  margin: 30px 0;
+}
+.video-area .video-content p {
+  color: #fff;
 }
 
 /*# sourceMappingURL=main.css.map */
