--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,6 +33,7 @@
 @import 'counter';
 @import 'team';
 @import 'calltoaction';
+@import 'prices';
 @import 'testimonial';
 @import 'blog';
 @import 'contact';
