--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2037,4 +2037,40 @@ label {
   color: #fff;
 }
 
+.prices-area .prices__item {
+  text-align: center;
+  padding: 40px 30px;
+  box-shadow: 0 15px 40px #eaeaea;
+}
+.prices-area .prices__item.featured h3 {
+  background: #e16038;
+  color: #ffffff;
+}
+.prices-area .prices__item span {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.prices-area .prices__item h3 {
+  font-size: 40px;
+  background: #fafafa;
+  padding: 10px;
+  margin: 20px 0;
+}
+.prices-area .prices__item h3 span {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 500;
+  text-transform: lowercase;
+}
+.prices-area .prices__item ul li {
+  line-height: 50px;
+}
+.prices-area .prices__item-btn {
+  margin-top: 25px;
+}
+.prices-area .prices__item-btn a {
+  text-transform: capitalize;
+}
+
 /*# sourceMappingURL=main.css.map */
