--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,10 +4,10 @@ sans-serif;
 // Colors ---------------
 $white: #ffffff;
 $black: #333;
-$grey:#f9f9f9;
+$grey:#eaeaea;
 $theme-color: #e16038;
 $body-text-color: #333;
-$hr-border-color:#eceff8;
+$hr-border-color:#eee;
 
 
 // Heading Color
