--- a/assets/csss/main.css
+++ b/assets/csss/main.css
@@ -165,7 +165,7 @@ p {
 }
 
 hr {
-  border-bottom: 1px solid #eceff8;
+  border-bottom: 1px solid #eee;
   border-top: 0 none;
   margin: 30px 0;
   padding: 0;
@@ -226,7 +226,7 @@ label {
     - Background color
 -----------------------------------------*/
 .grey-bg {
-  background: #f9f9f9;
+  background: #eaeaea;
 }
 
 .white-bg {
@@ -2092,6 +2092,82 @@ label {
   font-weight: 300;
   font-size: 16px;
   font-style: italic;
+}
+.testimonial-area .testimonials .owl-dots {
+  text-align: center;
+}
+.testimonial-area .testimonials .owl-dots button {
+  background-color: #e16038 !important;
+  width: 15px;
+  height: 15px;
+  margin: 0 5px;
+  border-radius: 50%;
+}
+.testimonial-area .testimonials .owl-dots button.active {
+  background-color: #ffffff !important;
+}
+
+.blog-area .blogs__item {
+  box-shadow: rgba(0, 0, 0, 0.75) 1px -1px 11px -7px;
+  margin-bottom: 30px;
+}
+.blog-area .blogs__item-img img {
+  width: 100%;
+}
+.blog-area .blogs__item-meta {
+  background-color: #ffffff;
+  text-align: center;
+  box-shadow: 0 15px 40px #eaeaea;
+  padding: 10px;
+  margin: 0 40px;
+  margin-top: -23px;
+  z-index: 1;
+  position: relative;
+  border-radius: 4px;
+}
+.blog-area .blogs__item-meta a {
+  color: #333;
+  margin: 0 10px;
+  font-size: 16px;
+}
+.blog-area .blogs__item-content {
+  padding: 40px 30px;
+}
+.blog-area .blogs__item-content h5 {
+  font-size: 20px;
+  text-transform: capitalize;
+  border-bottom: 1px dashed #eee;
+  padding-bottom: 10px;
+}
+.blog-area .blogs__item-content-btn a {
+  color: #333;
+  text-transform: capitalize;
+}
+.blog-area .blogs__item-content-btn a:hover {
+  color: #e16038;
+}
+
+.subscribe-area form {
+  position: relative;
+}
+
+.subscribe-area form input {
+  width: 100%;
+  padding: 12px 10px;
+  border: 0;
+  border-radius: 10px;
+}
+
+.subscribe-area form input[type=submit] {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 20%;
+  text-transform: capitalize;
+  background: red;
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=main.css.map */
