--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -13,6 +13,7 @@
                 text-transform: uppercase;
                 font-weight: 400;
                 letter-spacing: 1px;
+                font-weight: 700;
             }
 
             & .navbar-nav {
@@ -68,4 +69,17 @@
         border-color: $theme-color;
         color: $white;
     }
+}
+
+
+
+
+// ScrollTop
+.header-top {
+    transition: .3s;
+}
+.header-top.bg-dark.sticky {
+    position: fixed;
+    width: 100%;
+    padding: 15px 0;
 }
